<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/detail_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/bg_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin"
        android:paddingEnd="0dp"
        app:layout_constraintEnd_toStartOf="@+id/detail_save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_image">

        <TextView
            android:id="@+id/detail_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/textColorSecondary"
            android:textSize="12sp"
            tools:text="2 Jan 2019" />

        <TextView
            android:id="@+id/detail_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/textColorPrimary"
            android:textSize="24sp"
            tools:text="Milky way Galaxy" />

        <TextView
            android:id="@+id/detail_copyright"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            tools:text="Nasa" />

    </LinearLayout>


    <ImageButton
        android:id="@+id/detail_save"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout"
        android:background="#00000000"
        android:tint="@color/textColorSecondary"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        app:srcCompat="@drawable/ic_file_download_24dp" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/detail_save"
        app:layout_constraintEnd_toEndOf="@+id/detail_save"
        app:layout_constraintStart_toStartOf="@+id/detail_save"
        app:layout_constraintTop_toTopOf="@+id/detail_save" />

    <TextView
        android:id="@+id/detail_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/textColorSecondary"
        android:textSize="13sp"
        android:layout_margin="@dimen/activity_margin"
        android:paddingBottom="@dimen/double_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:text="Nasa" />
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>